--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "animate.css": "^4.1.1",
+    "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
